objects/Candidate__c.object
<CustomObject>
    <description>Object to store all Resumes managed under Nanostuffs&apos;s Recruitment Management System</description>
    <label>Candidates</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFO</fullName>
                    <color>#FFFFFF</color>
                    <label>CFO</label>
                </value>
                <value>
                    <fullName>VP Finance</fullName>
                    <color>#FFFFFF</color>
                    <label>VP Finance</label>
                </value>
                <value>
                    <fullName>CIO</fullName>
                    <color>#FFFFFF</color>
                    <label>CIO</label>
                </value>
                <value>
                    <fullName>Testing Engnr</fullName>
                    <color>#FFFFFF</color>
                    <label>Testing Engnr</label>
                </value>
                <value>
                    <fullName>Product Mgr</fullName>
                    <color>#FFFFFF</color>
                    <label>Product Mgr</label>
                </value>
                <value>
                    <fullName>Graphic/Web Designer</fullName>
                    <color>#FFFFFF</color>
                    <label>Graphic/Web Designer</label>
                </value>
                <value>
                    <fullName>Release Mgr</fullName>
                    <color>#FFFFFF</color>
                    <label>Release Mgr</label>
                </value>
                <value>
                    <fullName>DBA</fullName>
                    <color>#FFFFFF</color>
                    <label>DBA</label>
                </value>
                <value>
                    <fullName>Network Admin</fullName>
                    <color>#FFFFFF</color>
                    <label>Network Admin</label>
                </value>
                <value>
                    <fullName>System Admin</fullName>
                    <color>#FFFFFF</color>
                    <label>System Admin</label>
                </value>
                <value>
                    <fullName>System Security</fullName>
                    <color>#FFFFFF</color>
                    <label>System Security</label>
                </value>
                <value>
                    <fullName>Tech Support Engnr</fullName>
                    <color>#FFFFFF</color>
                    <label>Tech Support Engnr</label>
                </value>
                <value>
                    <fullName>Maintenance Engnr</fullName>
                    <color>#FFFFFF</color>
                    <label>Maintenance Engnr</label>
                </value>
                <value>
                    <fullName>Webmaster</fullName>
                    <color>#FFFFFF</color>
                    <label>Webmaster</label>
                </value>
                <value>
                    <fullName>IT/Networking-Mgr</fullName>
                    <color>#FFFFFF</color>
                    <label>IT/Networking-Mgr</label>
                </value>
                <value>
                    <fullName>Information Systems(MIS)-Mgr</fullName>
                    <color>#FFFFFF</color>
                    <label>Information Systems(MIS)-Mgr</label>
                </value>
                <value>
                    <fullName>System Integration</fullName>
                    <color>#FFFFFF</color>
                    <label>System Integration</label>
                </value>
                <value>
                    <fullName>Techician</fullName>
                    <color>#FFFFFF</color>
                    <label>Techician</label>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                    <color>#FFFFFF</color>
                    <label>Business Analyst</label>
                </value>
                <value>
                    <fullName>Datawarehousing Technician</fullName>
                    <color>#FFFFFF</color>
                    <label>Datawarehousing Technician</label>
                </value>
                <value>
                    <fullName>Outside Technical Consultant</fullName>
                    <color>#FFFFFF</color>
                    <label>Outside Technical Consultant</label>
                </value>
                <value>
                    <fullName>Functional Outside Consultant</fullName>
                    <color>#FFFFFF</color>
                    <label>Functional Outside Consultant</label>
                </value>
                <value>
                    <fullName>EDP Analyst</fullName>
                    <color>#FFFFFF</color>
                    <label>EDP Analyst</label>
                </value>
                <value>
                    <fullName>Technical Writer</fullName>
                    <color>#FFFFFF</color>
                    <label>Technical Writer</label>
                </value>
                <value>
                    <fullName>Instructional Designer</fullName>
                    <color>#FFFFFF</color>
                    <label>Instructional Designer</label>
                </value>
                <value>
                    <fullName>Technical Documentor</fullName>
                    <color>#FFFFFF</color>
                    <label>Technical Documentor</label>
                </value>
                <value>
                    <fullName>QA/QC Exec.</fullName>
                    <color>#FFFFFF</color>
                    <label>QA/QC Exec.</label>
                </value>
                <value>
                    <fullName>QA/QC Mgr</fullName>
                    <color>#FFFFFF</color>
                    <label>QA/QC Mgr</label>
                </value>
                <value>
                    <fullName>Project Mgr-IT/Software</fullName>
                    <color>#FFFFFF</color>
                    <label>Project Mgr-IT/Software</label>
                </value>
                <value>
                    <fullName>Program Mgr</fullName>
                    <color>#FFFFFF</color>
                    <label>Program Mgr</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <inlineHelpText>Personal Primary Email</inlineHelpText>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Open_to_Relocation__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                    <color>#FFFFFF</color>
                    <label>Los Angeles</label>
                </value>
                <value>
                    <fullName>Orange County</fullName>
                    <color>#FFFFFF</color>
                    <label>Orange County</label>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                    <color>#FFFFFF</color>
                    <label>San Diego</label>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                    <color>#FFFFFF</color>
                    <label>San Francisco</label>
                </value>
                <value>
                    <fullName>Portland</fullName>
                    <color>#FFFFFF</color>
                    <label>Portland</label>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                    <color>#FFFFFF</color>
                    <label>Dallas</label>
                </value>
                <value>
                    <fullName>Austin</fullName>
                    <color>#FFFFFF</color>
                    <label>Austin</label>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                    <color>#FFFFFF</color>
                    <label>San Antonio</label>
                </value>
                <value>
                    <fullName>Houston</fullName>
                    <color>#FFFFFF</color>
                    <label>Houston</label>
                </value>
                <value>
                    <fullName>Boston</fullName>
                    <color>#FFFFFF</color>
                    <label>Boston</label>
                </value>
                <value>
                    <fullName>New York</fullName>
                    <color>#FFFFFF</color>
                    <label>New York</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes1__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes2__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes3__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coding</fullName>
                    <color>#FFFFFF</color>
                    <label>Coding</label>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                    <color>#FFFFFF</color>
                    <label>Accounts</label>
                </value>
                <value>
                    <fullName>Management</fullName>
                    <color>#FFFFFF</color>
                    <label>Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Male</fullName>
                    <color>#FFFFFF</color>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>Female</fullName>
                    <color>#FFFFFF</color>
                    <label>Female</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mobnum__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>skill1__c</fullName>
        <label>Skill1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skill2__c</fullName>
        <label>Skill2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skill3__c</fullName>
        <label>Skill3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Selected</fullName>
                    <color>#FFFFFF</color>
                    <label>Selected</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <color>#FFFFFF</color>
                    <label>Rejected</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                    <color>#FFFFFF</color>
                    <label>In Process</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market1__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Los Angeles</fullName>
                    <color>#FFFFFF</color>
                    <label>Los Angeles</label>
                </value>
                <value>
                    <fullName>Orange County</fullName>
                    <color>#FFFFFF</color>
                    <label>Orange County</label>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                    <color>#FFFFFF</color>
                    <label>San Diego</label>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                    <color>#FFFFFF</color>
                    <label>San Francisco</label>
                </value>
                <value>
                    <fullName>Portland</fullName>
                    <color>#FFFFFF</color>
                    <label>Portland</label>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                    <color>#FFFFFF</color>
                    <label>Dallas</label>
                </value>
                <value>
                    <fullName>Austin</fullName>
                    <color>#FFFFFF</color>
                    <label>Austin</label>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                    <color>#FFFFFF</color>
                    <label>San Antonio</label>
                </value>
                <value>
                    <fullName>Houston</fullName>
                    <color>#FFFFFF</color>
                    <label>Houston</label>
                </value>
                <value>
                    <fullName>Boston</fullName>
                    <color>#FFFFFF</color>
                    <label>Boston</label>
                </value>
                <value>
                    <fullName>New York</fullName>
                    <color>#FFFFFF</color>
                    <label>New York</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dobdate__c</fullName>
        <label>Date Of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <color>#FFFFFF</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#FFFFFF</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#FFFFFF</color>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <color>#FFFFFF</color>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <color>#FFFFFF</color>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <color>#FFFFFF</color>
                    <label>6</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <color>#FFFFFF</color>
                    <label>7</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <color>#FFFFFF</color>
                    <label>8</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <color>#FFFFFF</color>
                    <label>9</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <color>#FFFFFF</color>
                    <label>10</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <color>#FFFFFF</color>
                    <label>11</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <color>#FFFFFF</color>
                    <label>12</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <color>#FFFFFF</color>
                    <label>13</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <color>#FFFFFF</color>
                    <label>14</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <color>#FFFFFF</color>
                    <label>15</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <color>#FFFFFF</color>
                    <label>16</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <color>#FFFFFF</color>
                    <label>17</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <color>#FFFFFF</color>
                    <label>18</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <color>#FFFFFF</color>
                    <label>19</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <color>#FFFFFF</color>
                    <label>20</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <color>#FFFFFF</color>
                    <label>21</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <color>#FFFFFF</color>
                    <label>22</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <color>#FFFFFF</color>
                    <label>23</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <color>#FFFFFF</color>
                    <label>24</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <color>#FFFFFF</color>
                    <label>25</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <color>#FFFFFF</color>
                    <label>26</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <color>#FFFFFF</color>
                    <label>27</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <color>#FFFFFF</color>
                    <label>28</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <color>#FFFFFF</color>
                    <label>29</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <color>#FFFFFF</color>
                    <label>30</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dobyear__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>2012</fullName>
                    <color>#FFFFFF</color>
                    <label>2012</label>
                </value>
                <value>
                    <fullName>2011</fullName>
                    <color>#FFFFFF</color>
                    <label>2011</label>
                </value>
                <value>
                    <fullName>2010</fullName>
                    <color>#FFFFFF</color>
                    <label>2010</label>
                </value>
                <value>
                    <fullName>2009</fullName>
                    <color>#FFFFFF</color>
                    <label>2009</label>
                </value>
                <value>
                    <fullName>2008</fullName>
                    <color>#FFFFFF</color>
                    <label>2008</label>
                </value>
                <value>
                    <fullName>2007</fullName>
                    <color>#FFFFFF</color>
                    <label>2007</label>
                </value>
                <value>
                    <fullName>2006</fullName>
                    <color>#FFFFFF</color>
                    <label>2006</label>
                </value>
                <value>
                    <fullName>2005</fullName>
                    <color>#FFFFFF</color>
                    <label>2005</label>
                </value>
                <value>
                    <fullName>2004</fullName>
                    <color>#FFFFFF</color>
                    <label>2004</label>
                </value>
                <value>
                    <fullName>2003</fullName>
                    <color>#FFFFFF</color>
                    <label>2003</label>
                </value>
                <value>
                    <fullName>2002</fullName>
                    <color>#FFFFFF</color>
                    <label>2002</label>
                </value>
                <value>
                    <fullName>2001</fullName>
                    <color>#FFFFFF</color>
                    <label>2001</label>
                </value>
                <value>
                    <fullName>2000</fullName>
                    <color>#FFFFFF</color>
                    <label>2000</label>
                </value>
                <value>
                    <fullName>1999</fullName>
                    <color>#FFFFFF</color>
                    <label>1999</label>
                </value>
                <value>
                    <fullName>1998</fullName>
                    <color>#FFFFFF</color>
                    <label>1998</label>
                </value>
                <value>
                    <fullName>1997</fullName>
                    <color>#FFFFFF</color>
                    <label>1997</label>
                </value>
                <value>
                    <fullName>1996</fullName>
                    <color>#FFFFFF</color>
                    <label>1996</label>
                </value>
                <value>
                    <fullName>1995</fullName>
                    <color>#FFFFFF</color>
                    <label>1995</label>
                </value>
                <value>
                    <fullName>1994</fullName>
                    <color>#FFFFFF</color>
                    <label>1994</label>
                </value>
                <value>
                    <fullName>1993</fullName>
                    <color>#FFFFFF</color>
                    <label>1993</label>
                </value>
                <value>
                    <fullName>1992</fullName>
                    <color>#FFFFFF</color>
                    <label>1992</label>
                </value>
                <value>
                    <fullName>1991</fullName>
                    <color>#FFFFFF</color>
                    <label>1991</label>
                </value>
                <value>
                    <fullName>1990</fullName>
                    <color>#FFFFFF</color>
                    <label>1990</label>
                </value>
                <value>
                    <fullName>1989</fullName>
                    <color>#FFFFFF</color>
                    <label>1989</label>
                </value>
                <value>
                    <fullName>1988</fullName>
                    <color>#FFFFFF</color>
                    <label>1988</label>
                </value>
                <value>
                    <fullName>1987</fullName>
                    <color>#FFFFFF</color>
                    <label>1987</label>
                </value>
                <value>
                    <fullName>1986</fullName>
                    <color>#FFFFFF</color>
                    <label>1986</label>
                </value>
                <value>
                    <fullName>1985</fullName>
                    <color>#FFFFFF</color>
                    <label>1985</label>
                </value>
                <value>
                    <fullName>1984</fullName>
                    <color>#FFFFFF</color>
                    <label>1984</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>empname__c</fullName>
        <label>Employer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pincode__c</fullName>
        <label>Pin Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPA_Firm__c</fullName>
        <label>CPA Firm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E&amp;Y</fullName>
                    <color>#FFFFFF</color>
                    <label>E&amp;Y</label>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                    <color>#FFFFFF</color>
                    <label>Deloitte</label>
                </value>
                <value>
                    <fullName>PWC</fullName>
                    <color>#FFFFFF</color>
                    <label>PWC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company1__c</fullName>
        <label>Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company2__c</fullName>
        <label>Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company3__c</fullName>
        <label>Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dobmonth__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <color>#FFFFFF</color>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>January</fullName>
                    <color>#FFFFFF</color>
                    <label>January</label>
                </value>
                <value>
                    <fullName>February</fullName>
                    <color>#FFFFFF</color>
                    <label>February</label>
                </value>
                <value>
                    <fullName>March</fullName>
                    <color>#FFFFFF</color>
                    <label>March</label>
                </value>
                <value>
                    <fullName>April</fullName>
                    <color>#FFFFFF</color>
                    <label>April</label>
                </value>
                <value>
                    <fullName>May</fullName>
                    <color>#FFFFFF</color>
                    <label>May</label>
                </value>
                <value>
                    <fullName>June</fullName>
                    <color>#FFFFFF</color>
                    <label>June</label>
                </value>
                <value>
                    <fullName>July</fullName>
                    <color>#FFFFFF</color>
                    <label>July</label>
                </value>
                <value>
                    <fullName>August</fullName>
                    <color>#FFFFFF</color>
                    <label>August</label>
                </value>
                <value>
                    <fullName>September</fullName>
                    <color>#FFFFFF</color>
                    <label>September</label>
                </value>
                <value>
                    <fullName>October</fullName>
                    <color>#FFFFFF</color>
                    <label>October</label>
                </value>
                <value>
                    <fullName>November</fullName>
                    <color>#FFFFFF</color>
                    <label>November</label>
                </value>
                <value>
                    <fullName>December</fullName>
                    <color>#FFFFFF</color>
                    <label>December</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>empname1__c</fullName>
        <label>Employer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fullname__c</fullName>
        <label>Full Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
</CustomObject>